--- a/AcademiaComputacion/AcademiaComputacion.vbproj
+++ b/AcademiaComputacion/AcademiaComputacion.vbproj
@@ -283,6 +283,12 @@
     <Compile Include="frmTipoEmpleado.vb">
       <SubType>Form</SubType>
     </Compile>
+    <Compile Include="frmUsuarios.Designer.vb">
+      <DependentUpon>frmUsuarios.vb</DependentUpon>
+    </Compile>
+    <Compile Include="frmUsuarios.vb">
+      <SubType>Form</SubType>
+    </Compile>
     <Compile Include="group.vb">
       <DependentUpon>Modelo.tt</DependentUpon>
     </Compile>
@@ -293,6 +299,8 @@
       <DependentUpon>Modelo.tt</DependentUpon>
     </Compile>
     <Compile Include="Logica\FnLoguear.vb" />
+    <Compile Include="Logica\Incriptacion.vb" />
+    <Compile Include="Logica\IngresarUsuario.vb" />
     <Compile Include="Modelo.Context.vb">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
@@ -391,6 +399,9 @@
     </EmbeddedResource>
     <EmbeddedResource Include="frmTipoEmpleado.resx">
       <DependentUpon>frmTipoEmpleado.vb</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="frmUsuarios.resx">
+      <DependentUpon>frmUsuarios.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="My Project\Resources.resx">
       <Generator>VbMyResourcesResXFileCodeGenerator</Generator>
