--- a/AcademiaComputacion/AcademiaComputacion.vbproj
+++ b/AcademiaComputacion/AcademiaComputacion.vbproj
@@ -221,13 +221,13 @@
     <Compile Include="Datos\Conexion.vb" />
     <Compile Include="Datos\crudController.vb" />
     <Compile Include="detailgroup.vb">
-      <DependentUpon>Modelo.tt</DependentUpon>
+      <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
     <Compile Include="employee.vb">
-      <DependentUpon>Modelo.tt</DependentUpon>
+      <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
     <Compile Include="extra_payments.vb">
-      <DependentUpon>Modelo.tt</DependentUpon>
+      <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
     <Compile Include="frmEmpleado.Designer.vb">
       <DependentUpon>frmEmpleado.vb</DependentUpon>
@@ -296,31 +296,31 @@
       <SubType>Form</SubType>
     </Compile>
     <Compile Include="group.vb">
-      <DependentUpon>Modelo.tt</DependentUpon>
+      <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
     <Compile Include="inscripcion.vb">
-      <DependentUpon>Modelo.tt</DependentUpon>
+      <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
     <Compile Include="laboratory.vb">
-      <DependentUpon>Modelo.tt</DependentUpon>
+      <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
     <Compile Include="Logica\FnLoguear.vb" />
     <Compile Include="Logica\Incriptacion.vb" />
     <Compile Include="Logica\IngresarUsuario.vb" />
-    <Compile Include="Modelo.Context.vb">
+    <Compile Include="Model1.Context.vb">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
-      <DependentUpon>Modelo.Context.tt</DependentUpon>
+      <DependentUpon>Model1.Context.tt</DependentUpon>
     </Compile>
     <Compile Include="Modelo.Designer.vb">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
       <DependentUpon>Modelo.edmx</DependentUpon>
     </Compile>
-    <Compile Include="Modelo.vb">
+    <Compile Include="Model1.vb">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
-      <DependentUpon>Modelo.tt</DependentUpon>
+      <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
     <Compile Include="Modulo\mdHerramientas.vb" />
     <Compile Include="My Project\AssemblyInfo.vb" />
@@ -339,34 +339,34 @@
       <DesignTimeSharedInput>True</DesignTimeSharedInput>
     </Compile>
     <Compile Include="passwordreset.vb">
-      <DependentUpon>Modelo.tt</DependentUpon>
+      <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
     <Compile Include="payment.vb">
-      <DependentUpon>Modelo.tt</DependentUpon>
+      <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
     <Compile Include="payment_types.vb">
-      <DependentUpon>Modelo.tt</DependentUpon>
+      <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
     <Compile Include="program.vb">
-      <DependentUpon>Modelo.tt</DependentUpon>
+      <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
     <Compile Include="schedules_practice.vb">
-      <DependentUpon>Modelo.tt</DependentUpon>
+      <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
     <Compile Include="share.vb">
-      <DependentUpon>Modelo.tt</DependentUpon>
+      <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
     <Compile Include="student.vb">
-      <DependentUpon>Modelo.tt</DependentUpon>
+      <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
-    <Compile Include="sysdiagram.vb">
-      <DependentUpon>Modelo.tt</DependentUpon>
+    <Compile Include="tic.vb">
+      <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
     <Compile Include="typeemployee.vb">
-      <DependentUpon>Modelo.tt</DependentUpon>
+      <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
     <Compile Include="user.vb">
-      <DependentUpon>Modelo.tt</DependentUpon>
+      <DependentUpon>Model1.tt</DependentUpon>
     </Compile>
   </ItemGroup>
   <ItemGroup>
@@ -422,18 +422,18 @@
       <Generator>EntityModelCodeGenerator</Generator>
       <LastGenOutput>Modelo.Designer.vb</LastGenOutput>
     </EntityDeploy>
-    <None Include="Modelo.Context.tt">
+    <None Include="Model1.Context.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
       <DependentUpon>Modelo.edmx</DependentUpon>
-      <LastGenOutput>Modelo.Context.vb</LastGenOutput>
+      <LastGenOutput>Model1.Context.vb</LastGenOutput>
     </None>
     <None Include="Modelo.edmx.diagram">
       <DependentUpon>Modelo.edmx</DependentUpon>
     </None>
-    <None Include="Modelo.tt">
+    <None Include="Model1.tt">
       <Generator>TextTemplatingFileGenerator</Generator>
       <DependentUpon>Modelo.edmx</DependentUpon>
-      <LastGenOutput>Modelo.vb</LastGenOutput>
+      <LastGenOutput>Model1.vb</LastGenOutput>
     </None>
     <None Include="My Project\app.manifest" />
     <None Include="My Project\Application.myapp">
