--- a/AcademiaComputacion/AcademiaComputacion.vbproj
+++ b/AcademiaComputacion/AcademiaComputacion.vbproj
@@ -8,7 +8,7 @@
     <SchemaVersion>2.0</SchemaVersion>
     <ProjectGuid>{29C4DD33-16DF-410E-900E-CC6CF01AEE8F}</ProjectGuid>
     <OutputType>WinExe</OutputType>
-    <StartupObject>AcademiaComputacion.FrmEmpleado</StartupObject>
+    <StartupObject>AcademiaComputacion.FrmLogin</StartupObject>
     <RootNamespace>AcademiaComputacion</RootNamespace>
     <AssemblyName>AcademiaComputacion</AssemblyName>
     <FileAlignment>512</FileAlignment>
@@ -263,12 +263,6 @@
     <Compile Include="extra_payments.vb">
       <DependentUpon>Modelo.tt</DependentUpon>
     </Compile>
-    <Compile Include="frmEmpleado.Designer.vb">
-      <DependentUpon>frmEmpleado.vb</DependentUpon>
-    </Compile>
-    <Compile Include="frmEmpleado.vb">
-      <SubType>Form</SubType>
-    </Compile>
     <Compile Include="frmGrupos1.Designer.vb">
       <DependentUpon>frmGrupos1.vb</DependentUpon>
     </Compile>
@@ -444,9 +438,6 @@
     <EmbeddedResource Include="ReporteMensualidad.rpt">
       <Generator>CrystalDecisions.VSDesigner.CodeGen.ReportCodeGenerator</Generator>
       <LastGenOutput>ReporteMensualidad.vb</LastGenOutput>
-    </EmbeddedResource>
-    <EmbeddedResource Include="frmEmpleado.resx">
-      <DependentUpon>frmEmpleado.vb</DependentUpon>
     </EmbeddedResource>
     <EmbeddedResource Include="frmGrupos1.resx">
       <DependentUpon>frmGrupos1.vb</DependentUpon>
